Apply CSS fixes and add mobile dark mode button ✨

--- a/src/Componets/navbar/Navbar.css
+++ b/src/Componets/navbar/Navbar.css
@@ -10,6 +10,9 @@
 .res-nav {
   display: none;
 }
+.res-nav-overlay{
+  display: none;
+}
 .scroll .navbar {
   transition: 0.5s ease all;
   animation: 0.5s navanimate;
@@ -122,7 +125,6 @@
   }
   .navbar-btn button #navopen {
     transform: rotate(270deg);
-    filter: var(--filter);
   }
   /* res nav css  */
   .res-nav {
@@ -140,9 +142,13 @@
     padding: 10px;
     transform: translateX(300px);
     transition: 0.2s ease-in;
+    top: 0;
   }
   .res-nav-active .res-nav {
     transform: translateX(0px);
+  }
+  .res-nav-active .res-nav-overlay {
+    display: block;
   }
   .res-nav-links {
     width: 100%;
@@ -162,5 +168,24 @@
     display: block;
     width: 100%;
     padding: 10px 0;
+  }
+  .res-nav-overlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 8;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    transition: 0.2s ease-in;
+  }
+  .mobile-light-mode{
+    padding-top: 4px;
+    height: 2rem;
+    background-color: transparent;
+    border: none;
+    display: flex;
+    justify-content: center;
+    width: 100%;
   }
 }
