--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ body.res-nav-active {
 /* body.res-nav-active nav {
   filter: blur(5px);
 } */
-body.res-nav-active #profile {
+/* body.res-nav-active #profile {
   filter: blur(5px);
 }
 body.res-nav-active #projects {
@@ -66,7 +66,7 @@ body.res-nav-active #projects {
 }
 body.res-nav-active #contact {
   filter: blur(5px);
-}
+} */
 .none {
   display: none;
 }
